@@ -13,26 +13,25 @@ L<Finance::Bank::Bankwest::Transaction> objects.
 
 =head1 SEE ALSO
 
-L<Finance::Bank::Bankwest::Parser>
 L<Finance::Bank::Bankwest::Transaction>
+L<HTTP::Response::Switch::Handler>
 
 =cut
 
 ## no critic (RequireUseStrict, RequireUseWarnings, RequireEndWithOne)
 use MooseX::Declare;
+use HTTP::Response::Switch::Handler 1.000000;
 class Finance::Bank::Bankwest::Parser::TransactionExport
-    extends Finance::Bank::Bankwest::Parser
+    with HTTP::Response::Switch::Handler
 {
     use Finance::Bank::Bankwest::Transaction ();
     use IO::String ();
     use Text::CSV_XS 0.66 (); # for "empty_is_undef" attribute
 
-    method TEST {
-        $self->bad_response
+    method handle {
+        $self->decline
             if $self->response->headers->content_type ne 'text/csv';
-    }
 
-    method PARSE {
         my $io = IO::String->new( $self->response->content_ref );
         my $csv = Text::CSV_XS->new({
             auto_diag       => 2,
