@@ -3,10 +3,9 @@ use Test::More;
 
 run_tests(
     undef,
-    't::lib::Test::ParserSubclass' => {
+    't::lib::Test::Parser' => {
         parser      => 'Login',
         test_fail   => {
-            'google'                  => 'BadResponse',
             'login-timeout'           => 'NotLoggedIn::Timeout',
             'login-bad-credentials'   => 'NotLoggedIn::BadCredentials',
             'login-no-credentials'    => 'NotLoggedIn::BadCredentials',
